* Подготовлена финальная версия Filmorate
* Добавление функционала общих фильмов

* feat: добавлена фильтрация популярных фильмов по жанру и году

* fix: исправлена ошибка компиляции с Date и дублирование зависимости в pom.xml

* Добавлены эндпоинты для удаления фильмов и пользователей

* Удалена лишняя проверка filmIds.isEmpty() в getAll()

* Добавлена функциональность режиссёров с сортировкой по году и лайкам

* Удалены .DS_Store

* Исправлена сортировка по году и лайкам

* Исправления

* fix: исправлена сортировка по году, получение режиссёров, getAll()

* Исправлени

* Возврат тестов API и добавление postman

* Исправление метода add, перенос класса DirectorController

* Исправление порядка выдаваемых фильмов

* Разборки с тестами

* очередная попытка

* Порядок фильмов

* Добавлена функциональность «Отзывы» (#9)

* Добавлена функциональность отзывов

* Добавлена сортировка по id при одинаковом количестве лайков

* fix: добавлена сортировка по id при одинаковом количестве лайков

* Изменения

* fix: замена getFirst() на get(0) для совместимости

* ci: обновление Java с 17 до 21 в GitHub Actions

* fix: обновление Java с 17 до 21 в pom.xml

* Исправление

* workflow из develop

* Добавление тестов

* война с апи-тестами

* Продолжение войны

* продолжение войны 2

* Исправления по итогам ревью, добавление проверки на существование userId и sriendId

* Правки по результатам ревью

* Добавлены рекомендации фильмов и интеграционные тесты

* Коррекция стиля

* Правки по результатам ревью

* Добавлена функциональность «Лента событий» (#13)

* Добавлена лента событий

* Исправлены ошибки после слияния с develop

* Исправлены конфликты

* Реализован поиск по названию и режиссёру (#12)

* Реализован поиск по названию и режиссёру

* Исправлена сортировка по году в FilmDbStorage и InMemoryFilmStorage

* Исправлены замечания

* Исправлен поиск фильмов после ревью

---------

Co-authored-by: damirshayk <damirshayk@yandex.ru>

* Исправлена загрузка лайков, изменена схема

* П